# confession-bot

./: .gitignore  Cargo.toml  Dockerfile  diesel.toml  fly.toml
migrations/2024-09-03-224158_authors/: down.sql  up.sql
migrations/2024-09-03-224249_confessions/: down.sql  up.sql
migrations/2024-09-03-224358_guilds/: down.sql  up.sql
migrations/2024-09-03-224501_delete_votes/: down.sql  up.sql
migrations/2024-10-01-201747_replies/: up.sql
migrations/2024-10-07-154759_confessions/: down.sql  up.sql
migrations/2024-10-12-215836_schedule/: up.sql
src/: client.rs  lib.rs  main.rs  models.rs  schema.rs
src/commands/: confess.rs  config.rs  mod.rs  reply.rs  schedule.rs
src/db_impl/: authors.rs  confessions.rs  guilds.rs  mod.rs  reply.rs  votes.rs
