[package]
name = "confession-bot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4.38"
diesel = { version = "2.2.4", features = [
    "sqlite",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15.7"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
rand = "0.8.5"
ring = "0.17.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0"
tracing-subscriber = { version = "0" }

[profile.release]
lto = "thin"
strip = true
